--- a/plugin/package.json
+++ b/plugin/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@internationalized/date": "^3.5.2",
     "camelize-ts": "^3.0.0",
+    "chrono-node": "^2.7.9",
     "classnames": "^2.5.1",
     "framer-motion": "^11.1.8",
     "obsidian": "1.7.2",
